fix overflow

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -7,11 +7,11 @@
   -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
   box-shadow: 3px 3px rgba(0,0,0,0.1);
   margin: 20px 0 20px 0;
-  /* overflow: scroll;
+  overflow: auto;
 }
 
 code {
-  font-family:'Bitstream Vera Sans Mono','Courier', monospace;
+  font-family: Consolas, monaco, monospace;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
